Mensaje descriptivo de tus cambios

--- a/menu.html
+++ b/menu.html
@@ -63,7 +63,7 @@
           </p>
         </section>
        
-        <section class="pancake_menu">
+        <section class="pancake_menu pancake-menu-section">
           <h1 class="section_title">Pancake menu</h1>
           <ul class="menu_list">
             <li class="menu_item">
@@ -125,3 +125,4 @@
     </footer>
   </body>
 </html>
+
